# footy-llm

./: .gitignore  AmazonQ.md  README.md  config.json.example  pyproject.toml
football_match_notification_service/: __init__.py  api_client.py  config_manager.py  event_detector.py  logger.py  match_tracker.py  models.py  parsers.py  retry.py  scheduler.py
specs/: AmazonQ.md  first-prompt.txt  prompt_plan.md  prompt_plan_update.md  requirements.md  second-prompt.txt  specification.md  todo.md
tests/: __init__.py  conftest.py  test_api_client.py  test_basic.py  test_config_manager.py  test_event_detector.py  test_logger.py  test_match_tracker.py  test_models.py  test_parsers.py  test_retry.py  test_scheduler.py
