[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "football-match-notification-service"
version = "0.1.0"
description = "A service that monitors football matches and sends notifications for key events"
readme = "README.md"
requires-python = ">=3.8"
license = "MIT"
authors = [
    { name = "Bjoern D", email = "bjoernd@example.com" },
]
keywords = [
    "football",
    "notifications",
    "match tracking",
]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: End Users/Desktop",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
]
dependencies = [
    "requests>=2.28.0",
    "pyyaml>=6.0",
    "python-dateutil>=2.8.2",
]

[project.urls]
Documentation = "https://github.com/bjoernd/bjoern-foot#readme"
Issues = "https://github.com/bjoernd/bjoern-foot/issues"
Source = "https://github.com/bjoernd/bjoern-foot"

[tool.hatch.envs.default]
dependencies = [
    "pytest>=7.0.0",
    "pytest-cov>=4.0.0",
]

[tool.hatch.envs.default.scripts]
test = "pytest {args:tests}"
test-cov = "pytest --cov=football_match_notification_service {args:tests}"
cov-report = "pytest --cov=football_match_notification_service --cov-report=html {args:tests}"

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = "test_*.py"
python_classes = "Test*"
python_functions = "test_*"
